--- a/SinExWebApp20256461/Views/Shipments/EnterTax.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/EnterTax.cshtml
@@ -59,6 +59,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.IfSendEmailRecipient, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                Yes @Html.RadioButtonFor(model => model.IfSendEmailRecipient, "Yes", new { @class = "btn_click", @disabled = "disabled" })
+                No @Html.RadioButtonFor(model => model.IfSendEmailRecipient, "No", new { @class = "btn_click", @disabled = "disabled" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Shipment.Status, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Shipment.Status, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
