--- a/SinExWebApp20256461/Views/Trackings/_GetTrackingListPartial.cshtml
+++ b/SinExWebApp20256461/Views/Trackings/_GetTrackingListPartial.cshtml
@@ -8,11 +8,13 @@
             </dd>
             <dt>Delivered to</dt>
             <dd>
-                @Html.DisplayFor(Model => Model.Shipment.Recipient.FullName)
+                @ViewBag.DeliveredTo
+                @*@Html.DisplayFor(Model => Model.Shipment.Recipient.FullName)*@
             </dd>
             <dt>Delivered at</dt>
             <dd>
-                @Html.DisplayFor(Model => Model.Shipment.Pickup.Location)
+                @ViewBag.DeliveredAt
+                @*@Html.DisplayFor(Model => Model.Shipment.Pickup.Location)*@
             </dd>
             <dt>Status</dt>
             <dd>
