--- a/SinExWebApp20256461/Views/Shipments/EditCustomer.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/EditCustomer.cshtml
@@ -297,11 +297,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-2">
-                <input type="submit" name="submit" value="Save" class="btn btn-default" />
+                <input type="submit" name="submit" value="Save" class="btn btn-default" title ="Click 'Save' if you want to save this Shipment for later" />
             </div>
             <div class="col-md-8">
-                <input type="submit" name="submit" value="Continue" class="btn btn-default" />
+                <input type="submit" name="submit" value="Continue" class="btn btn-default" title ="Click 'Continue' if you want to choose Pickup and confirm the shipment" />
             </div>
+
+            <h6>Click 'Save' if you want to save this Shipment for later</h6>
+            <h6>Click 'Continue' if you want to choose Pickup and confirm the shipment</h6>
         </div>
     </div>
 }
