added tutorial in pages

--- a/SinExWebApp20256461/Views/Destinations/Index.cshtml
+++ b/SinExWebApp20256461/Views/Destinations/Index.cshtml
@@ -5,6 +5,20 @@
 }
 
 <h2>Cities Served</h2>
+
+<div class="panel panel-success" style="display:inline-block">
+    <div class="panel-heading" align="center">
+        SYSTEM REQUIREMENTS
+    </div>
+    <div class="panel-body">
+        <h5 align="center">
+            3: Destinations
+        </h5>
+    </div>
+</div>
+
+
+
 @if (User.IsInRole("Employee"))
 {
     <p>
