--- a/SinExWebApp20256461/Views/Home/About.cshtml
+++ b/SinExWebApp20256461/Views/Home/About.cshtml
@@ -1,7 +1,16 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>COMP 3111: Software Engineering--Team 108</h2>
+<h3></h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Team 108
+<h6>DU, Xinnan	-	xduac@connect.ust.hk</h6>
+    <h6>
+        QI, Gengmo	-	gqi@connect.ust.hk
+    </h6>
+    <h6>
+        WU, Shangzhe	-	swuai@connect.ust.hk
+    </h6>
+    <h6>  YU, Zheqing	-	zyuaf@connect.ust.hk.</h6>
+</p>
