--- a/SinExWebApp20256461/Views/PackageTypes/Index.cshtml
+++ b/SinExWebApp20256461/Views/PackageTypes/Index.cshtml
@@ -5,6 +5,16 @@
 }
 
 <h2>Package Types</h2>
+<div class="panel panel-success" style="display:inline-block">
+    <div class="panel-heading" align="center">
+        SYSTEM REQUIREMENTS
+    </div>
+    <div class="panel-body">
+        <h5 align="center">
+            4: Package types, service types and fees
+        </h5>
+    </div>
+</div>
 
 <table class="table">
     <tr>
