--- a/SinExWebApp20256461/Views/SavedAddresses/Index.cshtml
+++ b/SinExWebApp20256461/Views/SavedAddresses/Index.cshtml
@@ -3,7 +3,7 @@
 <h2>Manage Saved Addresses</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create",null, new { @class = "btn btn-primary" })
 </p>
 
 <h4>Saved Recipient Address</h4>
