--- a/SinExWebApp20256461/Views/ServicePackageFees/Index.cshtml
+++ b/SinExWebApp20256461/Views/ServicePackageFees/Index.cshtml
@@ -5,6 +5,18 @@
 }
 
 <h2>Service/Package Fees</h2>
+
+<div class="panel panel-success" style="display:inline-block">
+    <div class="panel-heading" align="center">
+        SYSTEM REQUIREMENTS 4.Package types, service types and fees
+    </div>
+
+    <h5 align="center">
+        It should be possible to display the fees in any of the following currencies: Chinese Yuan (CNY - the
+        default), Hong Kong Dollar (HKD), New Taiwan Dollar (TWD) and Macanese Pataca (MOP)5.
+    </h5>
+</div>
+
 <table class="table">
     <tr>
         <th>
