--- a/SinExWebApp20256461/Views/Trackings/Create.cshtml
+++ b/SinExWebApp20256461/Views/Trackings/Create.cshtml
@@ -23,6 +23,18 @@
 
             <div class="form-horizontal">
                 <h2>Input Tracking</h2>
+
+                <hr />
+                <div class="panel panel-success" style="display:inline-block">
+                    <div class="panel-heading" align="center">
+                        OTHER REQUIREMENTS-External Systems
+                    </div>
+                    <div class="panel-body">
+                        <h5 align="center"> 1.Shipment Tracking System</h5>
+                        <h5 align="center"> Since this web page is strictly for testing purposes, it is not password protected (i.e., no login should be required to use this web page).</h5>
+                    </div>
+                    </div>
+
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @if (ViewBag.page == 1)
