--- a/SinExWebApp20256461/Views/Home/Index.cshtml
+++ b/SinExWebApp20256461/Views/Home/Index.cshtml
@@ -5,4 +5,5 @@
 <div class="jumbotron">
     <h1>SinEx LLC</h1>
     <p class="lead">Welcome to the SinEx Website.</p>
+    <h1 style="color:red">Best Viewed in Chrome</h1>
 </div>
