--- a/SinExWebApp20256461/Views/ServicePackageFees/Index.cshtml
+++ b/SinExWebApp20256461/Views/ServicePackageFees/Index.cshtml
@@ -12,8 +12,7 @@
     </div>
 
     <h5 align="center">
-        It should be possible to display the fees in any of the following currencies: Chinese Yuan (CNY - the
-        default), Hong Kong Dollar (HKD), New Taiwan Dollar (TWD) and Macanese Pataca (MOP)5.
+        Display the fees in any of the following currencies: Chinese Yuan (CNY-default), Hong Kong Dollar (HKD), New Taiwan Dollar (TWD) and Macanese Pataca (MOP)
     </h5>
 </div>
 
