--- a/SinExWebApp20256461/Views/Trackings/GetTracking.cshtml
+++ b/SinExWebApp20256461/Views/Trackings/GetTracking.cshtml
@@ -19,8 +19,7 @@
     <div class="form-horizontal">
         <div class="form-group">
             @Html.LabelFor(model => model.WaybillNumber, "Input Waybill Number", htmlAttributes: new { @class = "control-label col-md-2" })
-           
-            @Html.EditorFor(model => model.WaybillNumber, new { htmlAttributes = new { @class = "form-control col-md-4"} })
+            @Html.TextBoxFor(model => model.WaybillNumber, htmlAttributes : new { @class = "form-control col-md-4", placeholder = "e.g. 0000000000000001", @title = "e.g. 0000000000000001" })
             <div class="col-md-2">
                 <input type="submit" value="Search" class="btn btn-default" />
             </div>
